Doc: Fixing CodeHike vtex-io-documentation-site-editor-schema-examples.mdx

--- a/docs/guides/vtex-io/Storefront-Guides/concepts-1/vtex-io-documentation-site-editor-schema-examples.mdx
+++ b/docs/guides/vtex-io/Storefront-Guides/concepts-1/vtex-io-documentation-site-editor-schema-examples.mdx
@@ -412,7 +412,7 @@ In the Site Editor, this component will look like this:
 
 If you want to allow users to change the name of each item in the `images` array within the Site Editor, add the [`__editorItemTitle`](focus://49:53) prop to the item configuration. 
 
-```js ArrayComponent.tsx mark=49:53
+```js ArrayComponent.tsx
 import React from 'react'
 
 interface ImageProps {
@@ -510,7 +510,7 @@ The `enumNames` prop is used in conjunction with `enum` to provide a set of huma
 
 Imagine you have a [schema](focus://19:30) with `colors` as a prop, and the possible values are `red`, `blue`, or `black`.
 
-```js EnumComponent.tsx mark=9
+```js EnumComponent.tsx
 import React from 'react';
 
 interface EnumComponentProps {
