--- a/docs/faststore/docs/headless-cms/previewing-changes-in-development-mode.mdx
+++ b/docs/faststore/docs/headless-cms/previewing-changes-in-development-mode.mdx
@@ -19,7 +19,7 @@ During the implementation of a new section or component in the Headless CMS, you
 
    ![development-mode](https://vtexhelp.vtexassets.com/assets/docs/src/development-mode___5cd79e364aea0785e98ce6bb379f2acc.png)
 
-6. Click on `Preview`. A new tab will open
+6. Click the `Preview` button. A new tab will open.
 7. Copy the link from this tab, which will contain the `contentType`, `documentId`, and `versionId` parameters. The link should be similar to the following:
 
    ```
