--- a/docs/faststore/docs/customization/building-sections/override-use-cases/adding-an-image-to-the-alert-component.mdx
+++ b/docs/faststore/docs/customization/building-sections/override-use-cases/adding-an-image-to-the-alert-component.mdx
@@ -2,14 +2,14 @@
 title: 'Adding an image to the Alert component'
 ---
 
-This guide illustrates an advanced use case for [`getOverriddenSection`](https://developers.vtex.com/docs/guides/faststore/overrides-getoverriddensection-function) in FastStore. It focuses on customizing the Alert section's icon to display an image instead. 
+This guide illustrates an advanced use case for [`getOverriddenSection`](https://developers.vtex.com/docs/guides/faststore/overrides-getoverriddensection-function) in FastStore. It focuses on customizing the Alert section's icon to display a custom image as an icon instead. 
 
 > ℹ️ For detailed instructions on overriding components, refer to [Overriding native component’s props](https://developers.vtex.com/docs/guides/faststore/overrides-component-props) and [Overriding a native component](https://developers.vtex.com/docs/guides/faststore/overrides-native-component).
 
 ## Context
 
-- The native Alert section provides an `icon` prop for customization, but you want more control and flexibility over the displayed content.
-- You want to display a custom image alongside the text in your alert messages.
+- The native Alert section provides an `icon` prop for customization. It only accepts pre-defined icons, but you want more control and flexibility over the displayed content.
+- You want to display a custom image as the icon alongside the text in your alert messages.
 
 ## Implementation
 
@@ -25,27 +25,30 @@ By leveraging `getOverriddenSection`, you can create a custom component called `
     import { useMemo } from "react";
     ```
 
-4. Define the `AlertWithImageProps` interface:
+4. Define the `AlertWithImageProps` interface (from line 5 to 9):
 
-    ```tsx
+    ```tsx focus=5:9
+    import { getOverriddenSection } from "@faststore/core";
+    import Image from "next/image";
+    import { useMemo } from "react";
+
     interface AlertWithImageProps
-                    extends Omit<React.ComponentProps<typeof AlertSection>, "icon"> {
-                    src: string;
-                    alt: string;
-                }
+        extends Omit<React.ComponentProps<typeof AlertSection>, "icon"> {
+        src: string;
+        alt: string;
+    }
     ```
 
    - This interface defines the props accepted by the `AlertWithImage` component.
    - It inherits all props from the native Alert component, excluding the icon prop, which we intend to replace with an image.
    - It adds a new prop named `src`, which specifies the image source URL.
 
-5. Create the `AlertWithImage` component:
+5. Create the `AlertWithImage` component (from line 10 to 30):
 
-    ```tsx
+    ```tsx focus=10:20
     import { useMemo } from "react";
     import { AlertSection, getOverriddenSection } from "@faststore/core";
     import { Image_unstable as Image } from "@faststore/core/experimental";
-
 
     interface AlertWithImageProps
         extends Omit<React.ComponentProps<typeof AlertSection>, "icon"> {
@@ -126,9 +129,9 @@ The following schema was used as an example:
             "default": false,
             "title": "Is dismissible?"
             }
+          }
         }
-        }
-    }
+      }
     ]
     ```
 
