Apply suggestions from code review
Co-authored-by: Júlia Rabello <77292838+julia-rabello@users.noreply.github.com>

--- a/docs/faststore/docs/customization/building-sections/override-use-cases/adding-an-image-to-the-alert-component.mdx
+++ b/docs/faststore/docs/customization/building-sections/override-use-cases/adding-an-image-to-the-alert-component.mdx
@@ -2,13 +2,13 @@
 title: 'Adding an image to the Alert component'
 ---
 
-This guide illustrates an advanced use case for [`getOverriddenSection`](https://developers.vtex.com/docs/guides/faststore/overrides-getoverriddensection-function) in FastStore. It focuses on customizing the Alert section's icon to display a custom image as an icon instead. 
+This guide illustrates an advanced use case for [`getOverriddenSection`](https://developers.vtex.com/docs/guides/faststore/overrides-getoverriddensection-function) in FastStore. It focuses on customizing the [Alert](https://developers.vtex.com/docs/guides/faststore/building-sections-list-of-native-sections#alert) section's icon to display a custom image as an icon instead. 
 
 > ℹ️ For detailed instructions on overriding components, refer to [Overriding native component’s props](https://developers.vtex.com/docs/guides/faststore/overrides-component-props) and [Overriding a native component](https://developers.vtex.com/docs/guides/faststore/overrides-native-component).
 
 ## Context
 
-- The native Alert section provides an `icon` prop for customization. It only accepts pre-defined icons, but you want more control and flexibility over the displayed content.
+- The native [Alert](https://developers.vtex.com/docs/guides/faststore/building-sections-list-of-native-sections#alert) section provides an `icon` prop for customization. It only accepts predefined icons, but you want more control and flexibility over the displayed content.
 - You want to display a custom image as the icon alongside the text in your alert messages.
 
 ## Implementation
