--- a/docs/faststore/docs/customization/building-sections/override-use-cases/adding-more-icon-options-to-the-alert-component.mdx
+++ b/docs/faststore/docs/customization/building-sections/override-use-cases/adding-more-icon-options-to-the-alert-component.mdx
@@ -49,14 +49,15 @@ By leveraging `getOverriddenSection`, you can customize the Alert section's Head
 
     - This is an Alert component override with custom icon options in the Headless CMS. The component is defined using `getOverriddenSection`.
     - This code changes only the schema to include more options for native Icons supported by `@faststore/ui`.
-    - The override options specify:
-      - **`Section`:** The section to be overridden (Alert).
+    - The override options specify the `Section` to be overridden (Alert).
 
     > ℹ️ For further details on code implementation, see the [`CustomIconsAlert`](https://github.com/vtex-sites/playground.store/tree/main/src/components/sections/CustomIconsAlert) folder available in the [playground.store](https://github.com/vtex-sites/playground.store) repository.
 
 ### Synchronizing the changes with the Headless CMS
 
-Add the section to the Headless CMS by following the instructions available in [syncing components to the Headless CMS](https://developers.vtex.com/docs/guides/faststore/overrides-syncing-components-with-the-headless-cms). The following schema was used as an example:
+Add the section to the Headless CMS by following the instructions available in [syncing components to the Headless CMS](https://developers.vtex.com/docs/guides/faststore/overrides-syncing-components-with-the-headless-cms).
+
+The following schema was used as an example:
 
         ```json
         [    
