Code review suggestions

--- a/docs/faststore/docs/customization/building-sections/override-use-cases/adding-an-image-to-the-alert-component.mdx
+++ b/docs/faststore/docs/customization/building-sections/override-use-cases/adding-an-image-to-the-alert-component.mdx
@@ -1,8 +1,8 @@
 ---
-title: 'Adding an image to the Alert component'
+title: "Adding an image to the Alert component"
 ---
 
-This guide illustrates an advanced use case for [`getOverriddenSection`](https://developers.vtex.com/docs/guides/faststore/overrides-getoverriddensection-function) in FastStore. It focuses on customizing the [Alert](https://developers.vtex.com/docs/guides/faststore/building-sections-list-of-native-sections#alert) section's icon to display a custom image as an icon instead. 
+This guide illustrates an advanced use case for [`getOverriddenSection`](https://developers.vtex.com/docs/guides/faststore/overrides-getoverriddensection-function) in FastStore. It focuses on customizing the [Alert](https://developers.vtex.com/docs/guides/faststore/building-sections-list-of-native-sections#alert) section's icon to display a custom image as an icon instead.
 
 > ℹ️ For detailed instructions on overriding components, refer to [Overriding native component’s props](https://developers.vtex.com/docs/guides/faststore/overrides-component-props) and [Overriding a native component](https://developers.vtex.com/docs/guides/faststore/overrides-native-component).
 
@@ -19,25 +19,25 @@ By leveraging `getOverriddenSection`, you can create a custom component called `
 2. In the `AlertWithImage` folder, create the `AlertWithImage.tsx` file.
 3. Import the following to the `AlertWithImage.tsx` file:
 
-    ```tsx
-    import { getOverriddenSection } from "@faststore/core";
-    import Image from "next/image";
-    import { useMemo } from "react";
-    ```
+   ```tsx
+   import { getOverriddenSection } from "@faststore/core";
+   import Image from "next/image";
+   import { useMemo } from "react";
+   ```
 
 4. Define the `AlertWithImageProps` interface:
 
-    ```tsx focus=5:9
-    import { getOverriddenSection } from "@faststore/core";
-    import Image from "next/image";
-    import { useMemo } from "react";
+   ```tsx focus=5:9
+   import { getOverriddenSection } from "@faststore/core";
+   import Image from "next/image";
+   import { useMemo } from "react";
 
-    interface AlertWithImageProps
-        extends Omit<React.ComponentProps<typeof AlertSection>, "icon"> {
-        src: string;
-        alt: string;
-    }
-    ```
+   interface AlertWithImageProps
+     extends Omit<React.ComponentProps<typeof AlertSection>, "icon"> {
+     src: string;
+     alt: string;
+   }
+   ```
 
    - This interface defines the props accepted by the `AlertWithImage` component.
    - It inherits all props from the native Alert component, excluding the icon prop, which we intend to replace with an image.
@@ -45,62 +45,69 @@ By leveraging `getOverriddenSection`, you can create a custom component called `
 
 5. Create the `AlertWithImage` component:
 
-    ```tsx focus=10:31
-    import { useMemo } from "react";
-    import { AlertSection, getOverriddenSection } from "@faststore/core";
-    import { Image_unstable as Image } from "@faststore/core/experimental";
+   ```tsx focus=10:31
+   import { useMemo } from "react";
+   import { AlertSection, getOverriddenSection } from "@faststore/core";
+   import { Image_unstable as Image } from "@faststore/core/experimental";
 
-    interface AlertWithImageProps
-        extends Omit<React.ComponentProps<typeof AlertSection>, "icon"> {
-        src: string;
-        alt: string;
-    }
+   interface AlertWithImageProps
+     extends Omit<React.ComponentProps<typeof AlertSection>, "icon"> {
+     src: string;
+     alt: string;
+   }
 
-    export default function AlertWithImage(props: AlertWithImageProps) {
-        const { src, alt, ...otherProps } = props;
+   export default function AlertWithImage(props: AlertWithImageProps) {
+     const { src, alt, ...otherProps } = props;
 
-        const OverriddenAlert = useMemo(
-            () =>
-            getOverriddenSection({
-                Section: AlertSection,
-                className: styles.alertWithImage,
-                components: {
-                    Icon: {
-                        Component: () => (
-                            <Image src={props.src} alt={props.alt} width={24} height={24} />
-                        ),
-                    },
-                },
-            }),
-        []
-    );
+     const OverriddenAlert = useMemo(
+       () =>
+         getOverriddenSection({
+           Section: AlertSection,
+           className: styles.alertWithImage,
+           components: {
+             Icon: {
+               Component: () => (
+                 <Image
+                   src={props.src}
+                   alt={props.alt}
+                   width={24}
+                   height={24}
+                 />
+               ),
+             },
+           },
+         }),
+       []
+     );
 
-    return <OverriddenAlert {...otherProps} icon="" />;
-    }
-    ```
+     return <OverriddenAlert {...otherProps} icon="" />;
+   }
+   ```
 
-    - This function receives the `AlertWithImageProps`.
-    - It destructures the `src` prop containing the image source and remaining props using the spread operator (`...otherProps`).
-    - The core functionality lies within the `useMemo` hook.
-      - It defines the `OverriddenAlert` constant using `getOverriddenSection`.
-      - The override options specify:
-        - **`Section`:** The section to be overridden (Alert).
-        - **`components`:** An object containing the override for the Icon component.
+   - This function receives the `AlertWithImageProps`.
+   - It destructures the `src` prop containing the image source and remaining props using the spread operator (`...otherProps`).
+   - The core functionality lies within the `useMemo` hook.
 
-    - Inside the Icon override:
-      - **`Component`:** A function returning an `Image` component. This displays the image specified by the `src` prop.
-      - **`width`** and **`height`:** Optional props to set the size of the image.
+     - It defines the `OverriddenAlert` constant using `getOverriddenSection`.
+     - The override options specify:
+       - **`Section`:** The section to be overridden (Alert).
+       - **`components`:** An object containing the override for the Icon component.
 
-    - The use of `useMemo` ensures this override is only created once, improving performance.
-    - The function returns the `OverriddenAlert` component, spreading the `otherProps` and setting the `icon` prop to `noop` (effectively disabling the default icon behavior).
+   - Inside the Icon override:
 
-    > ℹ️ For further details on code implementation, see the `AlertWithImage` folder available in the playground.store repository.
+     - **`Component`:** A function returning an `Image` component. This displays the image specified by the `src` prop.
+     - **`width`** and **`height`:** Optional props to set the size of the image.
 
-6. Add the section to the Headless CMS by following the instructions available for sending components to the Headless CMS.
+   - The use of `useMemo` ensures this override is only created once, improving performance.
+   - The function returns the `OverriddenAlert` component, spreading the `otherProps` and setting the `icon` prop to `noop` (effectively disabling the default icon behavior).
 
-The following schema was used as an example:
+   > ℹ️ For further details on code implementation, see the [`AlertWithImage`](https://github.com/vtex-sites/playground.store/tree/main/src/components/sections/AlertWithImage) folder available in the [playground.store](https://github.com/vtex-sites/playground.store) repository.
 
-    ```json 
+6. Add the section to the Headless CMS by following the instructions available in [syncing components to the Headless CMS](https://developers.vtex.com/docs/guides/faststore/overrides-syncing-components-with-the-headless-cms).
+
+    The following schema was used as an example in [`cms/faststore/sections.json`](https://github.com/vtex-sites/playground.store/blob/main/cms/faststore/sections.json#L58-L101):
+
+    ```json
     [
         {
         "name": "AlertWithImage",
@@ -135,20 +142,20 @@ The following schema was used as an example:
     ]
     ```
 
-> ℹ️ For further details on code implementation, see the `sections.json` file available in the playground.store repository.
+> ℹ️ For further details on code implementation, see the [`sections.json`](https://github.com/vtex-sites/playground.store/blob/main/cms/faststore/sections.json#L58-L101) file available in the [playground.store](https://github.com/vtex-sites/playground.store/tree/main) repository.
 
 ## Results
 
 Once you have [set your development mode](https://developers.vtex.com/docs/guides/faststore/headless-cms-previewing-changes-in-development-mode) to see the changes locally, you can see the image as an icon in the alert:
 
 - **Before**
-  
+
   The native Alert displays one of the default icons, the `BellRinging`, following the sentence `Get 15% off today: NEW15! Buy now`.
 
-  ![before- alert-with-image](https://vtexhelp.vtexassets.com/assets/docs/src/before-custom-alert-image___fbd2316b0a78c7756fcc8523e7e6b181.png) 
-  
+  ![before- alert-with-image](https://vtexhelp.vtexassets.com/assets/docs/src/alert-default___12bbbaf326628380e71339c779d20f22.png)
+
 - **After**
-  
+
   The native Alert was replaced with the custom one, which features a pink image in the form of an icon added through Headless CMS.
-  
-  ![after - alert-with-image](https://vtexhelp.vtexassets.com/assets/docs/src/after-custom-alert-image___c4f735821a289a0fd0ce72947371e154.png)
+
+  ![after - alert-with-image](https://vtexhelp.vtexassets.com/assets/docs/src/alert-custom-image___0070f797fc5fdc69a5c6da983553868d.png)
