--- a/docs/faststore/docs/getting-started/2-setting-up-the-project.mdx
+++ b/docs/faststore/docs/getting-started/2-setting-up-the-project.mdx
@@ -1,5 +1,5 @@
 ---
-title: '2. Setting Up the Project'
+title: '2. Setting up the project'
 updatedAt: "2023-01-31T16:31:00.813Z"
 ---
 
@@ -86,16 +86,16 @@ To activate Developer Mode, refer to Microsoft's official guide on [Enabling you
 
 ---
 
-## Step 1: Cloning the Store's Repository
+## Step 1: Cloning the store's repository
 
 1. Open the terminal and navigate to the directory where you want to store your project.
 
-    > ℹ️ For Windowns users we highly recommend to enable the [Developer mode](https://developers.vtex.com/docs/guides/faststore/getting-started-2-setting-up-the-project#enabling-developer-mode-windows-users) to run the terminal.
+    > ℹ️ For Windows users, we highly recommend enabling the [Developer mode](https://developers.vtex.com/docs/guides/faststore/getting-started-2-setting-up-the-project#enabling-developer-mode-windows-users) to run the terminal.
 
 2. Clone the repository created during the [FastStore Onboarding](https://developers.vtex.com/docs/guides/faststore/1-onboarding-starting-the-project#step-2-deploying-the-project) by running the following command in the terminal:
 
     ```bash
-        git clone https://github.com/vtex-sites/{storeName}
+    git clone https://github.com/vtex-sites/{storeName}
     ```
 
     > ⚠️ Replace `{storeName}` for your store's repository.
@@ -143,9 +143,7 @@ Let's check what the project looks like in a web browser so far.
 
     ![localhost-example](https://vtexhelp.vtexassets.com/assets/docs/src/starter-gif___42003e72ece61064991a34c3f14e398f.gif)
 
-*Congratulations!* You have just created your very first FastStore store website! 🎉
-
-While your local development server is running, you can preview any changes you make to your files, and saved changes will hot reload in the browser. To stop the development server, return to the terminal and press `Ctrl + C`. To restart it, run `yarn dev` again.
+While your local development server is running, you can preview any changes you make to your files and saved changes will hot reload in the browser. To stop the development server, return to the terminal and press `Ctrl + C`. To restart it, run `yarn dev` again.
 
 ---
 
@@ -239,7 +237,7 @@ Let's make the first level of customization which updates the store's [theme](ht
     }
     ```
 
-3. Open the `faststore.config.js` file and changes the `theme` from `custom-theme` to `soft-blue`.
+3. Open the `faststore.config.js` file and change the `theme` from `custom-theme` to `soft-blue`.
 
     ```js faststore.config.js
       theme: 'soft-blue',
