--- a/docs/faststore/docs/getting-started/1-onboarding/starting-the-project.mdx
+++ b/docs/faststore/docs/getting-started/1-onboarding/starting-the-project.mdx
@@ -2,7 +2,6 @@
 title: 'Starting a new FastStore project'
 ---
 
-
 Now that you have an [overview of the app](https://developers.vtex.com/docs/guides/faststore/getting-started-overview), it's time to kickstart your project. In this guide, you will:
 
     - Create your FastStore project with the FastStore Onboarding app.
@@ -15,7 +14,7 @@ Now that you have an [overview of the app](https://developers.vtex.com/docs/guid
 
 ### Step 1: Setting up the project
 
-1. Open the Admin and acess the FastStore Onboarding app.
+1. Open the Admin and access the FastStore Onboarding app.
 2. Click `Start Project`.
 3. In the **Setup & Create Project** page, configure the following options for your store:
 
@@ -34,8 +33,8 @@ This helps us understand what you're trying to achieve with FastStore and improv
 | Field               | Description                                                                                                                                                                                                                                                     |
 | ------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | **Title Tag**       | Enter a keyword-optimized title for your store. For example: `Buy Online with the Best Game Store - GameStore`. In this example, we used the length limit of around 50-60 characters to ensure it is fully displayed in search results without being truncated. |
-| **Description Tag** | Enter a brief description of your store, for example `Shop online at GameStore, the best game store for PC, Xbox, PS4 and Headphones. Explore our wide selection and buy your favorite games today!`                                                            |
-| **Title Template**  | Enter a page title that helps search engines and users better understand the content of your store. For example `The best game store - GameStore`.                                                                                                              |
+| **Description Tag** | Enter a brief description of your store, for example, `Shop online at GameStore, the best game store for PC, Xbox, PS4 and Headphones. Explore our wide selection and buy your favorite games today!`                                                            |
+| **Title Template**  | Enter a page title that helps search engines and users better understand the content of your store. For example, `The best game store - GameStore`.                                                                                                              |
 | **Site Author**     | Enter the name of the agency or person responsible for the development of the storefront.                                                                                                                                                                       |
 
 
@@ -75,7 +74,7 @@ Connect with a GitHub personal account or organization of your choice to host th
 
     > ⚠️ If you choose to install the app in a GitHub organization, make sure you have admin access to an organization.
 
-To connect the FastStore WebOps app with follow these steps:
+To connect to the FastStore WebOps app, follow these steps:
 
 1. Click `Connect with GitHub`. A new browser tab will open on the side for you to integrate the app with GitHub.
 
@@ -89,7 +88,7 @@ To connect the FastStore WebOps app with follow these steps:
 
 4. Click `Install`.
 
-The following successful message will appear in the page:
+The following successful message will appear on the page:
 
     ```
     Success! You can now close this page and proceed with the onboarding process.
@@ -103,7 +102,7 @@ After seeing the success message, close the browser tab and continue the onboard
 
     - **Existing one:** Select one existing repository from the organization to start the project.
 
-6. Click `Create`. The deploy process will begin and once the deployment process is complete, you will be redirect to the [Deploy Summary](#deploying-the-project) page.
+6. Click `Create`. The deploy process will begin and, once the deployment process is complete, you will be redirected to the [Deploy Summary](#deploying-the-project) page.
 
 ### Step 3: Deploying the project
 
