--- a/docs/faststore/components/getting-started.mdx
+++ b/docs/faststore/components/getting-started.mdx
@@ -2,7 +2,6 @@
 title: "Getting started with FastStore UI"
 ---
 
-
 FastStore UI is an ecommerce-focused library of [brandless](https://developers.vtex.com/docs/guides/faststore/using-themes-overview#brandless-and-the-theming-structure) components you can easily use on your application.
 It provides features & basic style that makes it faster to implement and customize on top of it.
 
@@ -39,4 +38,4 @@ Import one of the following options:
 ```sh
 @import "@faststore/ui/src/styles/base.scss";
 ```
-You should also, import the desired components' style individually, by checking the component references to import it's style.
+You should also import the desired components' style individually by checking the component references to import its style.
