--- a/docs/faststore/docs/headless-cms/overview.mdx
+++ b/docs/faststore/docs/headless-cms/overview.mdx
@@ -3,7 +3,7 @@ title: 'Introducing the Headless CMS'
 sidebar_label: 'Introducing the Headless CMS'
 ---
 
-In this guide, you will be presented to **Headless CMS**, the solution for content management in FastStore projects. By using the Headless CMS, you can empower editors to create, edit, and publish web content independently through the VTEX Admin.
+In this guide, you will be presented with **Headless CMS**, the solution for content management in FastStore projects. By using the Headless CMS, you can empower editors to create, edit, and publish web content independently through the VTEX Admin.
 
 As a developer, you are responsible not only for creating custom frontend solutions for your client's store but also for defining which content of the storefront will be editable via a Content Management System (CMS). A CMS allows others to edit the frontend content of your store without having to touch your code at all.
 
@@ -43,7 +43,7 @@ To associate a role with the resources mentioned above, you can [create a custom
 
 Headless CMS is a headless content management system that allows users to store content in a decoupled data layer and deliver it as structured data to their FastStore project via an API.
 
-After successfully completing the [FastStore Onboarding process](https://developers.vtex.com/docs/guides/faststore/1-onboarding-overview), the app will be installed in your VTEX account. To access it go to the VTEX Admin and navigate to **Storefront > Headless CMS**.
+After successfully completing the [FastStore Onboarding process](https://developers.vtex.com/docs/guides/faststore/1-onboarding-overview), the app will be installed in your VTEX account. To access it, go to the VTEX Admin and navigate to **Storefront > Headless CMS**.
 The CMS provides a list of all web pages created with it, which is initially empty but populates as editors create new pages.
 
 Notice that each page created with the Headless CMS is related to a specific URL and is distinguished by the following properties:
@@ -51,7 +51,7 @@ Notice that each page created with the Headless CMS is related to a specific URL
 | Property name                          | Description                                                                                                                                                                                                                                                                      |
 | -------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | **Name**                               | Identifies a given page. This name is not available elsewhere and is used only internally in the Headless CMS for identification purposes.                                                                                                                                  |
-| **Type** *(a.k.a., Content Type)*      | Determines the nature of a page. For example, the **Type** can be a Landing Page, a Product Listing Page (PLP), a Product Detail Page (PDP), etc. You, as a developer, are the one responsible for defining which content types will be available for the editors of your store. |
+| **Type** *(a.k.a., Content Type)*      | Determines the nature of a page. For example, the **Type** can be a Landing Page, a Product Listing Page (PLP), a Product Details Page (PDP), etc. You, as a developer, are the one responsible for defining which content types will be available for the editors of your store. |
 | **Last modified**                      | Indicates the last time a given page was edited.                                                                                                                                                                                                                                 |
 | **Version**                            | Identifies the state of a page, if it's `draft` or `published`. Notice that editors can have more than one version of the same page with distinct settings and content.                                                                                           |
 
@@ -67,6 +67,6 @@ For each Content Type, different **Sections** will be available to compose that 
 
 ![CMS Section](https://vtexhelp.vtexassets.com/assets/docs/src/cms-sections___ccc8b00d73f222d249a009eb195c8e0c.png)
 
-Sections can be reused in different pages of an ecommerce. You are the one who will choose which Sections will be available at the CMS. Check the following example of the [Hero Section](https://developers.vtex.com/docs/guides/faststore/organisms-hero) being used:
+Sections can be reused on different pages of an ecommerce. You are the one who will choose which Sections will be available at the CMS. Check the following example of the [Hero Section](https://developers.vtex.com/docs/guides/faststore/organisms-hero) being used:
 
 ![Hero Section](https://vtexhelp.vtexassets.com/assets/docs/src/headless-example-hero___7cbbc99654d6607f50c013053b1348ca.png)
